Styles/baseStyles.css
@charset "utf-8";

/* BASE STYLING - SHOULD BE APPLIED TO ALL PAGES FOR COHESIVENESS */

/* Font Imports */

@font-face {
    font-family: Poppins;
    src: url(Fonts/Poppins-Regular.ttf) format('truetype');
}

@font-face {
    font-family: 'Playfair Display';
    src: url(Fonts/PlayfairDisplay-VariableFont_wght.ttf) format('truetype');
}

/* HTML and Body Styles */

html {
    background-image: url(../Images/waterBackground.jpg);
    background-size: cover;
    background-attachment: fixed;
    height: 100%;
    font-family: Poppins, Verdana, Geneva, sans-serif;
}

body {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    padding-bottom: 20px;
}
 
header, footer {
    width: 100%;
}

h1 {
    font-family: 'Playfair Display', serif;
}

/* Reset, do not touch! 
   "You can't stop me!" - Sam*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Navigation Styles */

.navbar {
    /*background-color: #FAF9F6;*/
    background-color: #F8FEF2;
    padding: 0 20px;
    min-height: 2em;
    clear: both;
}

.nav-list {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-list li {
    padding: 15px 20px;
    line-height: 1.2em;
}

.nav-list a {
    text-transform: uppercase;
    color: black;
    font-weight: 400px;
}

nav.navbar a#currentPage {
    color: #DBA845;
}

nav.navbar a:hover, nav.navbar a:active {
    color: #C98A00;
    /*background-color: #EBFCD9; */
    /* background-color: #F1EDE4; */
}


.main {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

.alert {
    margin-top: 3%;
    margin-bottom: 3%;
    padding: 10px;
    background: rgba(172, 20, 20, 0.75);
    color: white;
    text-align: center;
    font-size: 30px;
}

div#contactInfo{
    margin: 2%;
    padding: 20px;
    border-radius: 15px;
    text-align: center;
    background-color: #F8FEF2;
    box-shadow: rgb(51, 51, 51) 15px 0px 25px,
                rgb(51, 51, 51) -15px 0px 25px;
}

div#contactInfo h1{
    font-size: 40px;
}

div#contactInfo a img{
    display: inline-flexbox;
    margin: 3%;
    width: 10%;
}

/*for class divs */
#year2025,
#year2024 {
    display: none;
}

select {
    width: 100%;
    padding: 15px;
    text-align: left;
    font-family: Poppins, Verdana, Geneva, sans-serif;
    background-color: beige;
    border-radius: 15px;
}


/* Default Image Styling, excluding the Nav Icon */

img:not(#navicon) {
    width: 100%;
    margin-top: 2%;
    margin-bottom: 2%;
}

/* Footer Styles */ 

footer {
    padding: 1rem;
    background-color: #244248;
    color: white;
    position: fixed;
    width: 100%;
    left:0;
    bottom:0;
    padding-top: 10px;
    padding-bottom: 10px;
    display: flex;
    display: -webkit-flex;
    align-items: center;
    -webkit-align-items: center;
    justify-content: space-between;
    -webkit-justify-content: space-between;
}

footer .social-media-icons ul {
    display: flex;
    padding: 0;
    margin: 0;
}

footer .social-media-icons li {
    margin-right: 1rem; 
}

footer .social-media-icons li:last-of-type {
    margin-right: 0;
}

footer .social-media-icons .fa {
    font-size: 1.3rem;
    color: white;
}

/* Moble Devices up to 480px */

@media only screen and (max-width: 480px) {
    
}

